Intro To HTML & CSS Done

--- a/Unit-1/Day-01-intro-to-HTML/We/next-Santosh.html
+++ b/Unit-1/Day-01-intro-to-HTML/We/next-Santosh.html
@@ -16,21 +16,22 @@
 
     <!--order list -->
     <ol type="1">
-      <!--list itam-->
+      
       <li>mango</li>
-    <li>apple</li>
+      <li>apple</li>
       <li>orange</li>
-    </ol>
+  </ol>
 
       <!-- self closing tag  -->
 
-      <img width="200px" src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.pn" alt="Error">
+      <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="Error">
+      <input type="name">
       <input type="Email">
       <input type="Number">
-      <input type="text"
+      <input type="text">
       
 
-      <!-- Date,Password,Checkbox,range radio -->
+       <!-- Date,Password,Checkbox,range radio  -->
       <input type="date">
       <input type="Password">
       <input type="Checkbox">
