--- a/Unit-1/Day-02-intro-to-CSS/You/Index.html
+++ b/Unit-1/Day-02-intro-to-CSS/You/Index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <!-- RGB--Red,Green,Blue -->
-    <h1 style="color: rgb(0, 106, 255); background-color: hsl(60, 100%, 50%)">
+    <h1 style="color: rgb(0, 106, 255); background-color: yellowgreen">
       I am Heading-1
     </h1>
     <span style="color: rgb(0, 106, 255); background-color: hsl(60, 100%, 50%)">
@@ -27,7 +27,7 @@
     <h1 style="text-align: center">I am a very goog boy</h1>
 
     <p style="text-align: justify">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere optio,
+      Lorem ipsum dlor sit amet consectetur adipisicing elit. Facere optio,
       praesentium assumenda quo ex iusto iste quibusdam dicta dolorem culpa a
       corrupti provident cum nulla voluptates minus. Maiores, praesentium
       recusandae hic natus, a nemo, doloribus cupiditate tenetur esse eaque nam.
