Css-combinator-selector-Done

--- a/Unit-1/Day-03-CSS-Selectors/We/Index.html
+++ b/Unit-1/Day-03-CSS-Selectors/We/Index.html
@@ -6,12 +6,15 @@
     <title>Document</title>
   </head>
   <style>
+    /* Tag Selector */
     h1{
         font-size: 20px 
     }
     p{
         background-color: green;
     }
+
+    /* Id Selector */
     #dhoni{
         background-color: yellow ;
     }
