--- a/Unit-1/Day-03-CSS-Selectors/We/Score.html
+++ b/Unit-1/Day-03-CSS-Selectors/We/Score.html
@@ -5,15 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        /* Id selector */
         #heading{
             color: green
         }
+        /* Class Selectors */
         .button{
             color: palegreen
         }
+        /* Tag selector */
         h1{
             color:aqua
         }
+        /* Universal Selector */
         *{
             color: red
         }
