--- a/Unit-1/Day-02-intro-to-CSS/Assignments/bhool-bhulaiya.html
+++ b/Unit-1/Day-02-intro-to-CSS/Assignments/bhool-bhulaiya.html
@@ -12,7 +12,7 @@
                 width: 100%;
                 ">
             
-        <div style="border: 1px solid; width: 30%; text-align: center; box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; margin: 10px">
+        <div style=" width: 30%; text-align: center; box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; margin: 10px">
             <img style="width: 100%" src="https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/p173317_p_v10_ac.jpg" alt="">
             <h3>bhool bhulaiya</h3>
             <p>booking now</p>
