--- a/Unit-1/Day-06-CSS-Grid/Assignments/keybord.html
+++ b/Unit-1/Day-06-CSS-Grid/Assignments/keybord.html
@@ -14,7 +14,9 @@
     }
     .keybord > button{
         background-color: black;
-        color:aqua
+        color:aqua;
+        border-radius: 5px;
+        
     }
     #space{
         grid-column-start: 5;
