--- a/Unit-1/Day-07-Media-Queries/Assignments/Index1.html
+++ b/Unit-1/Day-07-Media-Queries/Assignments/Index1.html
@@ -7,35 +7,49 @@
     <title>Document</title>
     <style>
         #container {
-            border: 2px solid red;
-            width: 80%;
+            width 80%;
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             gap: 20px;
             margin: auto;
-            
-            
+            margin-top: 35px;
         }
 
-
         .top-child {
-            /* border: 1px solid blue; */
             display: flex;
             justify-content: space-between;
             align-items: center;
+            padding: 0px 20px;
 
         }
-        .child{
-            /* border: 1px solid black; */
+
+        .child {
             box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
             border-radius: 8px;
             padding-left: 20px;
         }
-        .top-child > h4{
+
+        .top-child>h4 {
             color: brown;
-            /* width: 150px; */
+        }
+        /* medium screens */
+      @media only screen and (min-width: 421px) and (max-width: 720px) {
+        #container{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+        }
+      }
+
+      /* small screens */
+      @media only screen and (min-width: 0px) and (max-width: 420px) {
+        #container{
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+            grid-template-rows: repeat(1, 1fr);
         }
 
+      }
     </style>
 </head>
 
