--- a/Unit-1/Day-07-Media-Queries/Assignments/Index1.html
+++ b/Unit-1/Day-07-Media-Queries/Assignments/Index1.html
@@ -47,6 +47,7 @@
             display: grid;
             grid-template-columns: repeat(1, 1fr);
             grid-template-rows: repeat(1, 1fr);
+            grid-row: ;
         }
 
       }
