--- a/Unit-1/Day-08-DOM-I/You/index1.html
+++ b/Unit-1/Day-08-DOM-I/You/index1.html
@@ -20,6 +20,12 @@ color: red;
     
 
 </body>
+
+
+
+<!-- Id Element -->
+<!-- innerText  -->
+
 <script>
    var x= document.getElementById("head1").innerText;
    console.log(x);
