--- a/Unit-1/Day-08-DOM-I/You/index2.html
+++ b/Unit-1/Day-08-DOM-I/You/index2.html
@@ -9,6 +9,10 @@
     <h1 id="head1">I am heading</h1>
     <button onclick="changeText()">change my text</button>
 </body>
+
+
+<!-- Adding Element -->
+
 <script>
 function changeText(){
     // console.log("hey am a robot");
