--- a/Unit-1/Day-08-DOM-I/You/index3.html
+++ b/Unit-1/Day-08-DOM-I/You/index3.html
@@ -12,6 +12,10 @@
     <h1 id="nameDisplay">display name here</h1>
     <h2 id="nameEmail">display email here</h2>
 </body>
+
+<!-- Input value -->
+
+
 <script>
     function getData(){
 let username = document.getElementById("name").value;
