--- a/Unit-1/Day-09-DOM-II/You/index.html
+++ b/Unit-1/Day-09-DOM-II/You/index.html
@@ -8,28 +8,32 @@
 <body>
     <h1 class="masai">Masai School</h1>
     <h1 class="masai">santosh pawar</h1>
+    <input class="masai" type="number" placeholder="Number Here">
+    <h1 class="masai">ghgjgjg</h1>
 </body>
 
 <script>
 
     // ClassNames :-
-  let x =  document.getElementsByClassName("masai");
+
+    
+//   let x =  document.getElementsByClassName("masai");
 //   console.log(x[0].textContent);
 //   console.log(x[1].textContent);
 
-for (let i=0; i<x.length; i++){
-    console.log(x[i].textContent);
-}
+// for (let i=0; i<x.length; i++){
+//     console.log(x[i].textContent);
+// }
 
 
 //  tagName :-
 
 
+// let y =  document.getElementsByClassName("masai");
+// console.log(y);
 
-
-
-
-
+// console.log(y[0].textContent);
+// console.log(y[1].textContent);
 
 
 
