--- a/Unit-1/Day-09-DOM-II/You/index5.html
+++ b/Unit-1/Day-09-DOM-II/You/index5.html
@@ -21,5 +21,8 @@
    var y = document.getElementById("myPara");
     y.setAttribute('style', 'font-size: 40px')
 
+// EX: 3
+var z = document.getElementById
+
 </script>
 </html>
