--- a/Unit-1/Day-02-intro-to-CSS/You/margin.html
+++ b/Unit-1/Day-02-intro-to-CSS/You/margin.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
+
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <div style="width: 500px; height: 550px; background-color: green; border: black solid; margin: 0px 0px 30px 50px; padding: 30px 0px 0px 0px;">
-        <div style="width: 300px; height: 300px; background-color: yellow;"></div>
+  </head>
+  <body>
+    <div
+      style="
+        width: 500px;
+        height: 550px;
+        background-color: green;
+        border: black solid;
+        margin: 0px 0px 30px 50px;
+        padding: 30px 0px 0px 0px;
+      "
+    >
+      <div style="width: 300px; height: 300px; background-color: yellow"></div>
     </div>
-    
-    <div style="width: 500px; height: 550px; background-color: green; border: black solid; margin: 0px 0px 30px 50px; padding: 30px 0px 0px 0px;">
-        <div style="width: 300px; height: 300px; background-color: yellow;"></div>
+
+    <div
+      style="
+        width: 500px;
+        height: 550px;
+        background-color: green;
+        border: black solid;
+        margin: 0px 0px 30px 50px;
+        padding: 30px 0px 0px 0px;
+      "
+    >
+      <div style="width: 300px; height: 300px; background-color: yellow"></div>
     </div>
-</body>
+  </body>
 </html>
