--- a/Unit-3/Day-02-DOM-2/You/problem03.html
+++ b/Unit-3/Day-02-DOM-2/You/problem03.html
@@ -41,7 +41,28 @@
     <h1 id="genderText">Gender</h1>
     <h1 id="ageText">age</h1> -->
 
-        
+        <table border="1">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Gender</th>
+                    <th>age</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- <tr>
+                    <td>Santosh</td>
+                    <td>Male</td>
+                    <td>22</td>
+                </tr> -->
+            </tbody>
+        </table>
+
+
+
+
+
+
   </body>
 
   <script>
@@ -54,10 +75,23 @@
     let gender = document.getElementById("gender");
     let age = document.getElementById("age");
 
+    let array = [];
+
+
     function formData() {
       event.preventDefault();
 
       console.log(name.value, gender.value, age.value);
+
+      let obj = {
+        name:name.value,
+        gender:gender.value,
+        age:age.value,
+      }
+      console.log(obj);
+      array.push(obj);
+      console.log(array);
+      displayData(array);
 
       //   let nameText = document.getElementById("nameText");
       //   nameText.textContent = name;
@@ -70,16 +104,42 @@
       // <h1 id="genderText">Gender</h1>
       // <h1 id="ageText">age</h1>
 
-      let head1 = document.createElement("h1");
-      head1.textContent = name.value;
+    //     let tr = document.createElement('tr')
 
-      let head2 = document.createElement("h1");
-      head2.textContent = gender.value;
+    //   let td1 = document.createElement("td");
+    //   td1.textContent = name.value;
 
-      let head3 = document.createElement("h1");
-      head3.textContent = age.value;
+    //   let td2 = document.createElement("td");
+    //   td2.textContent = gender.value;
 
-      document.querySelector("body").append(head1, head2, head3);
+    //   let td3 = document.createElement("td");
+    //   td3.textContent = age.value;
+
+    //   tr.append(td1, td2, td3);
+    //   document.querySelector('tbody').append(tr);
+    }
+
+
+    function displayData(array){
+        document.querySelector('tbody') . innerHTML = ""
+        array.forEach(function(ele){
+
+            let tr = document.createElement('tr')
+
+      let td1 = document.createElement("td");
+      td1.textContent = ele.name;
+
+      let td2 = document.createElement("td");
+      td2.textContent = ele.gender;
+
+      let td3 = document.createElement("td");
+      td3.textContent = ele.age;
+
+      tr.append(td1, td2, td3);
+      document.querySelector('tbody').append(tr);
+        });
+
+        
     }
   </script>
 </html>
