--- a/Unit-3/Day-08-Fetch-1/You/fetch.html
+++ b/Unit-3/Day-08-Fetch-1/You/fetch.html
@@ -32,7 +32,7 @@
     });
 
     function getData() {
-      fetch(`https://fakestoreapi.com/carts`)
+      fetch(`https://fakestoreapi.com/products`)
         .then(function (res) {
           console.log(res);
           return res.json();
