--- a/Unit-3/Day-08-Fetch-1/You/fetch.html
+++ b/Unit-3/Day-08-Fetch-1/You/fetch.html
@@ -33,19 +33,19 @@
 
     function getData() {
       fetch(`https://fakestoreapi.com/products`)
-        .then(function (res) {
-          console.log(res);
-          return res.json();
-        })
+        // .then(function (res) {
+        //   console.log(res);
+        //   return res.json();
+        // })
 
-        .then(function (data) {
-          console.log("Data", data);
-          displayData(data);
-        })
+        // .then(function (data) {
+        //   console.log("Data", data);
+        //   displayData(data);
+        // })
 
-        .catch(function (Error) {
-          console.log(Error);
-        });
+        // .catch(function (Error) {
+        //   console.log(Error);
+        // });
     }
 
     
